objects/AIA_Workplan_Type__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Used_For__c</fullName>
        <label>Used For</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Sales</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Workplan_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Workplan Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workplan_Type__c</fullName>
        <label>Workplan Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
                <value>
                    <fullName>Off-Cycle</fullName>
                </value>
                <value>
                    <fullName>Termination</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Workplan Type</label>
    <nameField>
        <displayFormat>WPT-{000000}</displayFormat>
        <label>Workplan Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workplan Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Workplan_Name__c</columns>
        <columns>Workplan_Type__c</columns>
        <columns>Used_For__c</columns>
        <columns>Active__c</columns>
        <columns>Version__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LGIT_Queue_AIA_Workplan_Type</fullName>
        <filterScope>Queue</filterScope>
        <label>MAST Tech Queue</label>
        <queue>AIA_LGIT_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
</CustomObject>